Make tablet build the default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -9,10 +9,10 @@
 % various page sizes
 %\tunemarkuptag{pghanlin}
 %\tunemarkuptag{pgnexus7}
-%\tunemarkuptag{pgnexus10}
+\tunemarkuptag{pgnexus10}
 %\tunemarkuptag{pgthinmob}
 %\tunemarkuptag{pgkoboaurahd}
-\tunemarkuptag{pgauraone}
+%\tunemarkuptag{pgauraone}
 %\tunemarkuptag{pgafour}
 %\tunemarkuptag{pgcrownq}
 %\tunemarkuptag{pgkindledx}
