Point out a discrepancy in the text

--- a/tex/p128.tex
+++ b/tex/p128.tex
@@ -23,7 +23,7 @@
 \vs p128 1:8 Of his human nature he was never in doubt; it was self\hyp{}evident and always present in his consciousness. But of his divine nature there was always room for doubt and conjecture, at least this was true right up to the event of his baptism. The self\hyp{}realization of divinity was a slow and, from the human standpoint, a natural evolutionary revelation. This revelation and self\hyp{}realization of divinity began in Jerusalem when he was not quite 13 years old with the first supernatural occurrence of his human existence; and this experience of effecting the self\hyp{}realization of his divine nature was completed at the time of his second supernatural experience while in the flesh, the episode attendant upon his baptism by John in the Jordan, which event marked the beginning of his public career of ministry and teaching.
 \vs p128 1:9 Between these two celestial visitations, one in his 13\ts{th} year and the other at his baptism, there occurred nothing supernatural or superhuman in the life of this incarnated Creator Son. Notwithstanding this, the babe of Bethlehem, the lad, youth, and man of Nazareth, was in reality the incarnated Creator of a universe; but he never once used aught of this power, nor did he utilize the guidance of celestial personalities, aside from that of his guardian seraphim, in the living of his human life up to the day of his baptism by John. And we who thus testify know whereof we speak.
 \vs p128 1:10 And yet, throughout all these years of his life in the flesh he was truly divine. He was actually a Creator Son of the Paradise Father. When once he had espoused his public career, subsequent to the technical completion of his purely mortal experience of sovereignty acquirement, he did not hesitate publicly to admit that he was the Son of God. He did not hesitate to declare, \textcolour{ubdarkred}{“I am Alpha and Omega, the beginning and the end, the first and the last.”} He made no protest in later years when he was called Lord of Glory, Ruler of a Universe, the Lord God of all creation, the Holy One of Israel, the Lord of all, our Lord and our God, God with us, having a name above every name and on all worlds, the Omnipotence of a universe, the Universe Mind of this creation, the One in whom are hid all treasures of wisdom and knowledge, the fullness of Him who fills all things, the eternal Word of the eternal God, the One who was before all things and in whom all things consist, the Creator of the heavens and the earth, the Upholder of a universe, the Judge of all the earth, the Giver of life eternal, the True Shepherd, the Deliverer of the worlds, and the Captain of our salvation.
-\vs p128 1:11 \pc He never objected to any of these titles as they were applied to him subsequent to the emergence from his purely human life into the later years of his self\hyp{}consciousness of the ministry of divinity in humanity, and for humanity, and to humanity on this world and for all other worlds. Jesus objected to but one title as applied to him: When he was once called Immanuel, he merely replied, \textcolour{ubdarkred}{“Not I, that is my elder brother.”}
+\vs p128 1:11 \pc He never objected to any of these titles as they were applied to him subsequent to the emergence from his purely human life into the later years of his self\hyp{}consciousness of the ministry of divinity in humanity, and for humanity, and to humanity on this world and for all other worlds. Jesus objected to but one title as applied to him: When he was once called Immanuel\fnst{The name ``Immanuel'' means ``God with us'', i.e. in Hebrew it consists of two words: \textheb{אֵל עִמָּנוּ}. This name was mentioned in the list in the previous paragraph in the sentence, beginning with the words ``He made no protest\ldots''. Thus it was wrong to assert that ``he made no protest'' there, and likewise that ``he never objected'' in the present paragraph..}, he merely replied, \textcolour{ubdarkred}{“Not I, that is my elder brother.”}
 \vs p128 1:12 Always, even after his emergence into the larger life on earth, Jesus was submissively subject to the will of the Father in heaven.
 \vs p128 1:13 After his baptism he thought nothing of permitting his sincere believers and grateful followers to worship him. Even while he wrestled with poverty and toiled with his hands to provide the necessities of life for his family, his awareness that he was a Son of God was growing; he knew that he was the maker of the heavens and this very earth whereon he was now living out his human existence. And the hosts of celestial beings throughout the great and onlooking universe likewise knew that this man of Nazareth was their beloved Sovereign and Creator\hyp{}father. A profound suspense pervaded the universe of Nebadon throughout these years; all celestial eyes were continuously focused on Urantia --- on Palestine.
 \vs p128 1:14 \pc This year Jesus went up to Jerusalem with Joseph to celebrate the Passover. Having taken James to the temple for consecration, he deemed it his duty to take Joseph. Jesus never exhibited any degree of partiality in dealing with his family. He went with Joseph to Jerusalem by the usual Jordan valley route, but he returned to Nazareth by the east Jordan way, which led through Amathus. Going down the Jordan, Jesus narrated Jewish history to Joseph and on the return trip told him about the experiences of the reputed tribes of Ruben, Gad, and Gilead that traditionally had dwelt in these regions east of the river.
