Expand the notes at 41:3.2-3

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -31,8 +31,8 @@
 \vs p041 2:8 The power\hyp{}energy supervision of the evolutionary inhabited worlds is the responsibility of the Master Physical Controllers, but these beings are not responsible for all energy misbehaviour on Urantia. There are a number of reasons for such disturbances, some of which are beyond the domain and control of the physical custodians. Urantia is in the lines of tremendous energies, a small planet in the circuit of enormous masses, and the local controllers sometimes employ enormous numbers of their order in an effort to equalize these lines of energy. They do fairly well with regard to the physical circuits of Satania but have trouble insulating against the powerful Norlatiadek currents.
 \usection{Our Starry Associates}
 \vs p041 3:1 There are upward of 2,000 brilliant suns\fnst{A sphere centred on Urantia with the radius of 65\,ly contains about 2,000 stars. Therefore, assuming that the star density in other parts of Satania is at least as great as in the vicinity of our Sun, we can deduce that the size of Satania cannot be greater than 130\,ly.} pouring forth light and energy in Satania, and your own sun is an average blazing orb. Of the 30 suns nearest yours, only 3 are brighter\fnst{The 30 nearest stars lie in a sphere of radius 12.6\,ly and the three stars brighter than ours are: $\alpha$ Centauri (4.35\,ly), Sirius (8.57\,ly) and Procyon (11.4\,ly). These are the same three stars mentioned in the source text \cite{Jeans1}.}. The Universe Power Directors initiate the specialized currents of energy which play between the individual stars and their respective systems. These solar furnaces, together with the dark giants of space, serve the power centres and physical controllers as way stations for the effective concentrating and directionizing of the energy circuits of the material creations.
-\vs p041 3:2 The suns of Nebadon are not unlike those of other universes. The material composition of all suns, dark islands, planets, and satellites, even meteors, is quite identical. These suns have an average diameter of about $1.6\times 10^6$\,km, that of your own solar orb being slightly less\fnst{Our own ``solar orb'' has an average diameter of $1.392684 \times 10^6$\,km.}. The largest star in the universe, the stellar cloud Antares, has a diameter 680 that of your sun\fnst{According to https://arxiv.org/abs/1304.4800} --- or about a billion kilometres. One could pack about 207 million\fnst{Calculated with the same packing efficiency of 65.8\% for identical spheres that is used in the human source text of \cite{Jeans1}, p.\,183.} of your own suns inside it, and there would still be room to spare. But there is abundant space to accommodate all of these enormous suns. They have just as much comparative elbow room in space as one dozen oranges\fnst{In the human original we have ``thirty cricket balls'' instead.} would have if they were circulating about throughout the interior of Urantia, and were the planet a hollow globe.
-\vs p041 3:3 \pc When suns that are too large are thrown off a nebular mother wheel, they soon break up or form double stars. All suns are originally truly gaseous, though they may later transiently exist in a semiliquid state. When your sun attained this quasi\hyp{}liquid state of supergas\fnst{Defined at \bibref[41:4.3]{p041 4:3} as almost fully ionized plasma.} pressure, it was not sufficiently large to split equatorially, this being one type of double star formation.
+\vs p041 3:2 The suns of Nebadon are not unlike those of other universes. The material composition of all suns, dark islands, planets, and satellites, even meteors, is quite identical. These suns have an average diameter of about $1.6\times 10^6$\,km, that of your own solar orb being slightly less\fnst{Our own ``solar orb'' has an average diameter of $1.392684 \times 10^6$\,km.}. The largest star in the universe, the stellar cloud Antares, is 680 times\fnst{In 1955 text ``four hundred and fifty times'', corrected to the modern value according to \cite{Ohnaka1}.} the diameter of your sun --- or about a billion kilometres\fnst{In 1955 text the phrase ``--- or about a billion kilometres'' missing.}. One could pack about 207 million\fnst{In 1955 text ``and is sixty million times its volume''. This error creates an obvious contradiction with the simple fact of Euclidean geometry: the volume of a ball is proportional to the cube of its diameter. An attempt to rescue the situation by using non-Euclidean geometry in the context of Einstein's General Relativity has been made in 2012 \cite{Aivazian1}, but it is not satisfactory as it implies an impossibly large density for a star of this class. However, in 2018 I discovered a proper solution to this problem. Namely, this text was taken from the book by Sir James Jeans (\cite{Jeans1}, p.\,183) and misunderstood by Dr. Sadler, namely the concept of ``packing of spheres'' (presumed to be fairly obvious to a typical youth of the British Empire of those times, for whom Jeans' book was written) was mistaken for a completely different notion of ``the ratio of volumes''. For the present text's purposes I derived the number ``207 million'' from the modern value of Antares' diameter, but using the same packing efficiency of 65.8\% for identical spheres, which (efficiency) was used in the human source text \cite{Jeans1}.} of your own suns inside it, and there would still be room to spare. But there is abundant space to accommodate all of these enormous suns. They have just as much comparative elbow room in space as one dozen oranges\fnst{In the human original we have ``thirty cricket balls'' instead.} would have if they were circulating about throughout the interior of Urantia, and were the planet a hollow globe.
+\vs p041 3:3 \pc When suns that are too large are thrown off a nebular mother wheel, they soon break up or form double stars. All suns are originally truly gaseous, though they may later transiently exist in a semiliquid state. When your sun attained this quasi\hyp{}liquid state of supergas\fnst{Defined at \bibref[41:4.3]{p041 4:3} as almost fully ionised plasma.} pressure, it was not sufficiently large to split equatorially, this being one type of double star formation.
 \vs p041 3:4 When less than \bibfrac{1}{10}\ts{th} the size of your sun, these fiery spheres rapidly contract, condense, and cool. When upwards of 30 times its size --- rather 30 times the gross content of actual material --- suns readily split into two separate bodies, either becoming the centres of new systems or else remaining in each other’s gravity grasp and revolving about a common centre as one type of double star.
 \vs p041 3:5 \pc The most recent of the major cosmic eruptions in Orvonton was the extraordinary double star explosion, the light of which reached Urantia in A.D.\,1572.\fnst{The supernova SN\,1572 appeared in early November 1572 is known as ``Tycho's supernova'', because in 1573 Tycho Brahe published both his own observations and the analysis of sightings of others. In England, Queen Elizabeth summoned Thomas Allen the mathematician to have his advice about the new Star that appeared in the Cassiopeia. In China, the star was interpreted as an evil omen for the young Wanli Emperor, which, however did not prevent him reigning for the next 48 years.} This conflagration was so intense that the explosion was clearly visible in broad daylight.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Tycho-Supernova.jpg}\caption{X-ray image of SN\,1572, Chandra X-ray Observatory.}\end{figure}}
 \vs p041 3:6 \pc Not all stars are solid, but many of the older ones are. Some of the reddish, faintly glimmering stars have acquired a density at the centre of their enormous masses which would be expressed by saying that 1 cm\ts{3} of such a star, if on Urantia, would weigh 166\,kg. The enormous pressure, accompanied by loss of heat and circulating energy, has resulted in bringing the orbits of the basic material units closer and closer together until they now closely approach the status of electronic condensation. This process of cooling and contraction may continue to the limiting and critical explosion point of ultimatonic condensation.
@@ -43,7 +43,7 @@
 \usection{Sun Density}
 \vs p041 4:1 The mass of your sun is slightly greater than the estimate of your physicists, who have reckoned it as about $2\times 10^{30}$\,kg\fnst{The present estimate is: $1.98892 \times 10^{30}$ kg.}. It now exists about halfway between the most dense and the most diffuse stars, having about 1.5 times the density of water\fnst{More accurately: $1.408 \times 10^3$\,kg/m\ts{3}.}. But your sun is neither a liquid nor a solid --- it is gaseous --- and this is true notwithstanding the difficulty of explaining how gaseous matter can attain this and even much greater densities.
 \vs p041 4:2 \pc Gaseous, liquid, and solid states are matters of atomic\hyp{}molecular relationships, but density is a relationship of space and mass. Density varies directly with the quantity of mass in space and inversely with the amount of space in mass, the space between the central cores of matter and the particles which whirl around these centres as well as the space within such material particles.
-\vs p041 4:3 \pc Cooling stars can be physically gaseous and tremendously dense at the same time. You are not familiar with the solar \bibemph{supergases,}\fnst{In the original source text (``Stars and Atoms'' by A.S.\,Eddington, \cite{Eddington1}) the phrase ``not imperfect, but superperfect'' explains the prefix ``super''.} but these and other unusual forms of matter explain how even nonsolid suns can attain a density equal to iron --- about the same as Urantia --- and yet be in a highly heated gaseous state and continue to function as suns. The atoms in these dense supergases are exceptionally small; they contain few electrons. Such suns have also largely lost their free ultimatonic stores of energy.
+\vs p041 4:3 \pc Cooling stars can be physically gaseous and tremendously dense at the same time. You are not familiar with the solar \bibemph{supergases,}\fnst{In the original source text (``Stars and Atoms'' by A.S.\,Eddington, \cite{Eddington1}) the phrase ``not imperfect, but superperfect'', referring to the almost fully ionised gas, explains the prefix ``super''.} but these and other unusual forms of matter explain how even nonsolid suns can attain a density equal to iron --- about the same as Urantia --- and yet be in a highly heated gaseous state and continue to function as suns. The atoms in these dense supergases are exceptionally small; they contain few electrons. Such suns have also largely lost their free ultimatonic stores of energy.
 \vs p041 4:4 One of your near-by suns, which started life with about the same mass as yours, has now contracted almost to the size of Urantia, having become 40,000\fnst{In 1955 text ``sixty thousand''. Textual consistency and current scientific estimates of our sun’s density both support the change to “40,000.” The first paragraph of this section states that our sun is about 1.5 times the density of water 1 g/cm\ts{3}, and 40,000 times this is 40 kg/cm\ts{3}; the current scientific estimate of the sun’s density is 1.4 times the density of water; 40,000 times that is 56 kg/cm\ts{3}. The likely cause of this error in the 1955 text is that the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by a simple keystroke error in which 6 was mis-keyed for 4, creating 60,000 instead of 40,000. When the text was formatted for printing, the numerals were changed to words, and an error that formerly consisted of one digit was transformed into an incorrect word. The formatting of words and numbers for printing is not a revelatory issue; it is a matter of style, and is covered extensively in the Chicago Manual of Style. (The problem at \bibref[43:1.6]{p043 1:6} in the text appears to have had an identical origin, and \bibref[42:5.1]{p042 5:1} in the text is very closely related.)} times as dense as your sun. The weight of this hot\hyp{}cold gaseous\hyp{}solid is about 61 kg/cm\ts{3}\fnst{Calculating the density we obtain $\rho = 1851.8$\,kg/cm\ts{3}, which differs greatly from the figure 61\,kg/cm\ts{3} given in the text. Therefore, this ``near-by sun'' has lost most of its mass by now.}. And still this sun shines with a faint reddish glow, the senile glimmer of a dying monarch of light.
 \vs p041 4:5 Most of the suns, however, are not so dense. One of your nearer neighbours\fnst{The distance to Capella (α Aurig\ae) is estimated to be about 43 light years.} has a density exactly equal to that of your atmosphere at sea level. If you were in the interior of this sun, you would be unable to discern anything. And temperature permitting, you could penetrate the majority of the suns which twinkle in the night sky and notice no more matter than you perceive in the air of your earthly living rooms.
 \vs p041 4:6 The massive sun of Veluntia, one of the largest in Orvonton, has a density only 0.001 that of Urantia’s atmosphere. Were it in composition similar to your atmosphere and not superheated, it would be such a vacuum that human beings would speedily suffocate if they were in or on it.
@@ -104,15 +104,15 @@
 \tunemarkuptwo{nobiblio}{}{%
 \begin{thebibliography}{100}
 \bibitem{Eddington1}
-A.S.~Eddington
+A.S.~Eddington.
 {``Stars and Atoms''}
 {\em Oxford: Clarendon Press}, 1927.
 \bibitem{Eddington2}
-A.S.~Eddington
+A.S.~Eddington.
 {``Space, Time,  and Gravitation''}
 {\em Cambridge: University Press}, 1920.
 \bibitem{Eddington3}
-A.S.~Eddington
+A.S.~Eddington.
 {``Further Notes on the Radiative Equilibrium of the Stars''}
 {\em Monthly Notices of the Royal Astronomical Society, Volume 77, Issue 8, June 1917, p.\,596--612}, 1917.
 \bibitem{Jeans1}
@@ -131,5 +131,13 @@ A.A.~Vlasov.
 Arnold Sommerfeld.
 {``Atomic Structure and Spectral Lines''}
 {\em E.P. Dutton \&\ Company, New York}, 1934.
+\bibitem{Aivazian1}
+Tigran Aivazian.
+{``The Volume of Antares''}
+{\myurl{http://www.bibles.org.uk/articles/T.Aivazian-The-Volume-of-Antares.pdf}}, 2012.
+\bibitem{Ohnaka1}
+Keiichi Ohnaka, Karl-Heinz Hofmann, Dieter Schertl, Gerd Weigelt, Carlo Baffa, Alain Chelli, Romain Petrov, Sylvie Robbe-Dubois.
+{``High spectral resolution imaging of the dynamical atmosphere of the red supergiant Antares in the CO first overtone lines with VLTI/AMBER''}
+{\myurl{https://arxiv.org/abs/1304.4800}}, 2013.
 \end{thebibliography}
 }
