Decrease the URL font size

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -1126,7 +1126,7 @@
    \end{center}%
 }
 
-\newcommand{\myurl}[1]{\href{#1}{#1}}
+\newcommand{\myurl}[1]{\href{#1}{\small\texttt{#1}}}
 
 \newcommand{\upaper}[2]{%
 \newpage\thispagestyle{empty}%
