Make the links colourful

--- a/ubook.sty
+++ b/ubook.sty
@@ -50,13 +50,13 @@
                 hyperfootnotes=false,%
                 pdfpagelabels,%
                 colorlinks,%
-                linkcolor=\tunemarkup{pgnexus7}{blue}\tunemarkup{pgnexus10}{blue}\tunemarkup{pgthinmob}{blue}\tunemarkup{pgkoboaurahd}{black}\tunemarkup{pgkoboauraone}{black}\tunemarkup{pgkobomini}{black}\tunemarkup{pgafour}{black},%
+                linkcolor=ublinkcolor,%
                 anchorcolor=black,%
-                citecolor=black,%
+                citecolor=ublinkcolor,%
                 filecolor=black,%
                 menucolor=black,%
                 pagecolor=black,%
-                urlcolor=\tunemarkup{pgnexus7}{blue}\tunemarkup{pgnexus10}{blue}\tunemarkup{pgthinmob}{blue}\tunemarkup{pgkoboaurahd}{black}\tunemarkup{pgkoboauraone}{black}\tunemarkup{pgkobomini}{black}\tunemarkup{pgafour}{black}]{hyperref}
+                urlcolor=ublinkcolor]{hyperref}
 
 \protected\def\bib@raise@anchor#1{%
   \ifhmode
