Highlight the URL.

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -58,7 +58,7 @@ Edited by Tigran Aivazian\\[2ex]
 The text of \bibemph{The Urantia Papers} is in the public domain.}\\[5pt]
 \tunemarkuptwo{coverimage}{Cover design by Gary Tonge.\\}{}
 The latest version of this book can be downloaded from:\\
-{\upshape\bfseries http://www.bibles.org.uk}\\
+{\upshape\bfseries \myurl{http://www.bibles.org.uk}}\\
 Please send all comments to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
 \tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2021 under Linux.\\
 English text set in {\bfseries\tunemarkup{garamond}{Adobe }\urantiamainfont\tunemarkup{garamond}{ Opticals}} at \urantiamainfontsize pt.\\
