Typo 11:8.9 "angular moment" => "angular momentum"

--- a/tex/p011.tex
+++ b/tex/p011.tex
@@ -74,7 +74,7 @@
 \vs p011 8:6 \ublistelem{2.}\bibnobreakspace \bibemph{Gravity Stages (Energy).} This modification of the force\hyp{}charge of space is produced by the action of the Paradise force organizers. It signalizes the appearance of energy systems responsive to the pull of Paradise gravity. This emergent energy is originally neutral but consequent upon further metamorphosis will exhibit the so\hyp{}called negative and positive qualities. We designate these stages \bibemph{ultimata.}
 \vs p011 8:7 \ublistelem{3.}\bibnobreakspace \bibemph{Postgravity Stages (Universe Power).} In this stage, energy\hyp{}matter discloses response to the control of linear gravity. In the central universe these physical systems are threefold organizations known as \bibemph{triata.} They are the superpower mother systems of the creations of time and space. The physical systems of the superuniverses are mobilized by the Universe Power Directors and their associates. These material organizations are dual in constitution and are known as \bibemph{gravita.} The dark gravity bodies encircling Havona are neither triata nor gravita, and their drawing power discloses both forms of physical gravity, linear and absolute.
 \vs p011 8:8 \pc Space potency is not subject to the interactions of any form of gravitation. This primal endowment of Paradise is not an actual level of reality, but it is ancestral to all relative functional nonspirit realities --- all manifestations of force\hyp{}energy and the organization of power and matter. Space potency is a term difficult to define. It does not mean that which is ancestral to space; its meaning should convey the idea of the potencies and potentials existent within space. It may be roughly conceived to include all those absolute influences and potentials which emanate from Paradise and constitute the space presence of the Unqualified Absolute.
-\vs p011 8:9 Paradise is the absolute source and the eternal focal point of all energy\hyp{}matter in the universe of universes. The Unqualified Absolute is the revealer, regulator, and repository of that which has Paradise as its source and origin. The universal presence of the Unqualified Absolute seems to be equivalent to the concept of a potential infinity of gravity extension, an elastic tension of Paradise presence. This concept aids us in grasping the fact that everything is drawn inward towards Paradise. The illustration is crude but nonetheless helpful. It also explains why gravity always acts preferentially in the plane perpendicular to the mass\fnst{A \bibemph{plane} cannot be perpendicular to a \bibemph{mass}, any more than an \bibemph{apple} can be perpendicular to an \bibemph{orange}. As is known from celestial mechanics, the orbits of two bodies, interacting according to Newton's law, lie in the same plane, determined by the angular moment, which is conserved both in the direction and magnitude. In the case of planets orbiting a Sun this plane is known as \bibemph{ecliptic}. When the transport seraphim accelerates to the speed of light and beyond, the subluminal motion occurs in the direction, \bibemph{perpendicular} to the plane of ecliptic (from the present editor's personal experience). This fact may be related to the ``preferential action of gravity'' mentioned in the text.}, a phenomenon indicative of the differential dimensions of Paradise\fnst{Thus (see the previous note) the elliptic trajectories in the Kepler's problem are indicative of the elliptic shape of Paradise!} and the surrounding creations.
+\vs p011 8:9 Paradise is the absolute source and the eternal focal point of all energy\hyp{}matter in the universe of universes. The Unqualified Absolute is the revealer, regulator, and repository of that which has Paradise as its source and origin. The universal presence of the Unqualified Absolute seems to be equivalent to the concept of a potential infinity of gravity extension, an elastic tension of Paradise presence. This concept aids us in grasping the fact that everything is drawn inward towards Paradise. The illustration is crude but nonetheless helpful. It also explains why gravity always acts preferentially in the plane perpendicular to the mass\fnst{A \bibemph{plane} cannot be perpendicular to a \bibemph{mass}, any more than an \bibemph{apple} can be perpendicular to an \bibemph{orange}. As is known from celestial mechanics, the orbits of two bodies, interacting according to Newton's law, lie in the same plane, determined by the angular momentum, which is conserved both in the direction and magnitude. In the case of planets orbiting a Sun this plane is known as \bibemph{ecliptic}. When the transport seraphim accelerates to the speed of light and beyond, the subluminal motion occurs in the direction, \bibemph{perpendicular} to the plane of ecliptic (from the present editor's personal experience). This fact may be related to the ``preferential action of gravity'' mentioned in the text.}, a phenomenon indicative of the differential dimensions of Paradise\fnst{Thus (see the previous note) the elliptic trajectories in the Kepler's problem are indicative of the elliptic shape of Paradise!} and the surrounding creations.
 \usection{The Uniqueness of Paradise}
 \vs p011 9:1 Paradise is unique in that it is the realm of primal origin and the final goal of destiny for all spirit personalities. Although it is true that not all of the lower spirit beings of the local universes are immediately destined to Paradise, Paradise still remains the goal of desire for all supermaterial personalities.
 \vs p011 9:2 \pc Paradise is the geographic centre of infinity; it is not a part of universal creation, not even a real part of the eternal Havona universe. We commonly refer to the central Isle as belonging to the divine universe, but it really does not. Paradise is an eternal and exclusive existence.
