--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -28,8 +28,8 @@
 
 % various font families
 %\tunemarkuptag{basker}
-\tunemarkuptag{garamond}
-%\tunemarkuptag{jenson}
+%\tunemarkuptag{garamond}
+\tunemarkuptag{jenson}
 
 % comment out for NO page break BEFORE Part title
 %\tunemarkuptag{beforepartnewpage}
@@ -38,7 +38,7 @@
 \tunemarkuptag{afterpartnewpage}
 
 % comment out for public PDF build
-%\tunemarkuptag{private}
+\tunemarkuptag{private}
 
 % comment out to disable pictures
 \tunemarkuptag{pictures}
@@ -845,9 +845,9 @@
 \renewcommand{\bibtocheadfont}{\fontsize{12}{12}\mdseries}
 \renewcommand{\bibtocfont}{\fontsize{8.6}{15}\selectfont}
 \newcommand{\minitocfontsize}{\headingfont\fontsize{9.2}{9.2}\selectfont}
-\newcommand{\bibbookend}{\fontsize{18.5}{21}\selectfont}
-\newcommand{\urantiamainfontsize}{18.5/21}
-\renewcommand{\footnotesize}{\fontsize{15}{17}\selectfont}
+\newcommand{\bibbookend}{\fontsize{17.5}{20}\selectfont}
+\newcommand{\urantiamainfontsize}{17.5/20}
+\renewcommand{\footnotesize}{\fontsize{14.5}{16}\selectfont}
 \newcommand{\introfontsize}{\bibbookend}
 }
 
